2013-08-16	Alexander V. Lukyanov <lav@yars.free.net>

	* lftp.c: document ftp:ssl-auth.

2013-04-12	Alexander V. Lukyanov <lav@yars.free.net>

	* lftp.1: document cmd:cls-* settings.

2013-03-19	Alexander V. Lukyanov <lav@yars.free.net>

	* lftp.1: document Meta-Tab key; restore settings abc order.

2013-02-27	Alexander V. Lukyanov <lav@yars.free.net>

	* lftp.1: add udp tracker reference; add ssl:use-sni description.

2013-02-20	Alexander V. Lukyanov <lav@yars.free.net>

	* lftp.1: document "jobs" command arguments.

2013-02-15	Alexander V. Lukyanov <lav@yars.free.net>

	* lftp.1: document cmd:show-status.

2013-02-01	Alexander V. Lukyanov <lav@yars.free.net>

	* lftp.1: document cmd:at-background and cmd:at-terminate settings.

2013-01-24	Alexander V. Lukyanov <lav@yars.free.net>

	* lftp.1: document XDG_* environment variables.
	* lftp.1: document cmd:at-exit-fg.

2012-12-14	Alexander V. Lukyanov <lav@yars.free.net>

	* lftp.1: document new cmd:interactive type.

2012-08-24	Alexander V. Lukyanov <lav@yars.free.net>

	* lftp.1: document new torrent features.

2012-03-26	Alexander V. Lukyanov <lav@yars.free.net>

	* lftp.1: document torrent:retracker; fix type of xfer:log-file.

2011-12-30	Alexander V. Lukyanov <lav@yars.free.net>

	* lftp.1: document new settings: cmd:at-exit-bg, at-finish,
	  at-queue-finish.

2011-10-19	Alexander V. Lukyanov <lav@yars.free.net>

	* lftp.1: document ftp:use-tvfs setting; minor updates.

2011-09-28	Alexander V. Lukyanov <lav@yars.free.net>

	* lftp.1: document get -e option.

2011-06-16	Alexander V. Lukyanov <lav@yars.free.net>

	* lftp.1: document attach; sockets path; torrent:ipv6 default.

2011-05-11	Alexander V. Lukyanov <lav@yars.free.net>

	* lftp.1: use tbl

2011-04-29	Alexander V. Lukyanov <lav@yars.free.net>

	* lftp.1: add mirror:no-empty-dirs setting.

2011-03-25	Alexander V. Lukyanov <lav@yars.free.net>

	* lftp.1: document xfer:log-file and ftp:use-ip-tos

2010-12-30	Alexander V. Lukyanov <lav@yars.free.net>
