@@ -1,6 +1,10 @@
+2013-08-30	Alexander V. Lukyanov <lav@yars.free.net>
+
+	* lftp.1: document mirror -f and -O options.
+
 2013-08-16	Alexander V. Lukyanov <lav@yars.free.net>
 
-	* lftp.c: document ftp:ssl-auth.
+	* lftp.1: document ftp:ssl-auth.
 
 2013-04-12	Alexander V. Lukyanov <lav@yars.free.net>
 
